<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A4554"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Connexion" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/connect"
        android:textAlignment="center"
        android:textColor="#478A61"
        android:textSize="25dp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/arrondir"
        android:ems="10"
        android:height="50dp"
        android:hint="@string/username"
        android:padding="10dp" >

    </EditText>

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUser"
        android:layout_below="@+id/editTextUser"
        android:layout_marginTop="25dp"
        android:background="@drawable/arrondir"
        android:ems="10"
        android:height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPass"
        android:layout_below="@+id/editTextPass"
        android:layout_marginTop="28dp"
        android:background="#D64541"
        android:onClick="gestLogin"
        android:text="@string/Login"
        android:textColor="#F9F5FF"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:src="@drawable/velo" />

    <Button
        android:id="@+id/buttonInscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="#3A4A48"
        android:text="@string/inscription"
        android:textColor="#F9F5FF"
        android:onClick="gestInscription" />

</RelativeLayout>